--- a/.github/workflows/pytest-cpu.yml
+++ b/.github/workflows/pytest-cpu.yml
@@ -38,7 +38,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e .
-        
+
     - name: Test with pytest
       run: |
-        pytest
+        pytest --codeblocks
