--- a/.github/workflows/pytest-cpu.yml
+++ b/.github/workflows/pytest-cpu.yml
@@ -5,8 +5,9 @@ on:
     branches:
       - master
   pull_request:
-    branches:
-      - master
+  #pull_request:
+  #  branches:
+  #    - master
 
 jobs:
   pytest:
